Fix login modal error: 	- If you clicked kitbuilder and tried to log in with invalid credentials the modal wouldn't catch the error. 		- It would just dismiss without reporting the error. 		- Then if you tried this again with valid credentials the modal would be stuck on the screen. 	- Fixed by moving the set errorMessage logic and dismiss call inside of the authenticate action. 		- This way the promise from the ajax call can get resolved and depending on its success or failure we set the errorMessage would get set.
Fix Firefox/Webkit padding discrepancy:
	- added a @media query that checks if browser is firefox. If it is add less padding to the .slide class.

--- a/app/styles/pages/_page_main.scss
+++ b/app/styles/pages/_page_main.scss
@@ -27,7 +27,7 @@
 .slide {
   width: 100%;
   height: 100%;
-  padding-top: 50px; // see through nav
+  padding-top: 100px; // see through nav
   position: absolute;
   overflow-y: scroll;
   z-index: 200;
@@ -37,6 +37,22 @@
   top: 0;
   -webkit-transition: .55s all ease;
   transition: .55s all ease;
+}
+@-moz-document url-prefix() { 
+  .slide {
+    width: 100%;
+    height: 100%;
+    padding-top: 50px; // see through nav
+    position: absolute;
+    overflow-y: scroll;
+    z-index: 200;
+    -webkit-overflow-scrolling: touch;
+    left: 0;
+    right: 0;
+    top: 0;
+    -webkit-transition: .55s all ease;
+    transition: .55s all ease;
+  }
 }
 
 .slide.ng-hide {
